k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oodev
  labels:
    # Marks namespaces of dev apps in the shared cluster, see `make destroy`
    dynamist.se/dev-app: oodev
